@@ -1,3 +1,8 @@
+2004-12-15  Alexander Larsson  <alexl@redhat.com>
+
+	* glib/glib-sections.txt:
+	Add g_filename_display_basename
+
 2004-12-15  Matthias Clasen  <mclasen@redhat.com>
 
 	* gobject/tmpl/generic_values.sgml: Document some return
